unpackaged/main/default/objects/Opportunity/fields/Loss_reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_reason__c</fullName>
    <label>Loss reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>something</fullName>
            </value>
            <value>
                <fullName>notsomething</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>