unpackaged/main/default/objects/Opportunity/fields/number_of_days_to_close_date__c.field-meta.xml
<CustomField>
    <fullName>number_of_days_to_close_date__c</fullName>
    <formula>CloseDate  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number of days to close date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>