unpackaged/main/default/objects/Opportunity/recordTypes/OpprecordType.recordType-meta.xml
<RecordType>
    <fullName>OpprecordType</fullName>
    <active>true</active>
    <businessProcess>Oppsalesprocess</businessProcess>
    <description>Opportunitys created</description>
    <label>OpprecordType</label>
</RecordType>