unpackaged/main/default/objects/Opportunity/recordTypes/OppsrecordType.recordType-meta.xml
<RecordType>
    <fullName>OppsrecordType</fullName>
    <active>true</active>
    <businessProcess>Oppsalesprocess</businessProcess>
    <description>Opportunitys created</description>
    <label>OppsrecordType</label>
</RecordType>