unpackaged/main/default/objects/Opportunity/recordTypes/TestRecordtype.recordType-meta.xml
<RecordType>
    <fullName>TestRecordtype</fullName>
    <active>true</active>
    <businessProcess>Oppsalesprocess</businessProcess>
    <label>TestRecordtype</label>
</RecordType>