unpackaged/main/default/objects/Opportunity/validationRules/Validate_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Description</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  NOT(ISBLANK( Amount )) , ISBLANK( Description ) )</errorConditionFormula>
    <errorMessage>Please fill descrption</errorMessage>
</ValidationRule>